fix gap in mena theme

--- a/public/themes/mena.scss
+++ b/public/themes/mena.scss
@@ -67,7 +67,7 @@ body {
     ul {
         list-style: none;
         display: flex;
-        gap: 0.3em;
+        gap: 0.6em;
         padding: 0 0.5em;
         margin: 0;
         align-items: stretch;
